refactor machine to use `setup` method it's awesome 🪄

--- a/audio-player-react/tsconfig.json
+++ b/audio-player-react/tsconfig.json
@@ -19,8 +19,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "strictNullChecks": true,
-    "exactOptionalPropertyTypes": true
+    "strictNullChecks": true
+    // "exactOptionalPropertyTypes": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
